Fix navbar to use english file names

--- a/frontend/navbar.html
+++ b/frontend/navbar.html
@@ -20,8 +20,8 @@
 }
 </style>
 <div id="navbar">
-  <button onclick="navigateTo('קביעת תור.html')">קביעת תור</button>
-  <button onclick="navigateTo('פורום.html')">פורום</button>
+  <button onclick="navigateTo('make-appointment.html')">קביעת תור</button>
+  <button onclick="navigateTo('forum.html')">פורום</button>
   <button onclick="navigateTo('')">איזור אישי</button>
   <button onclick="logout()">יציאה</button>
 </div>
