--- a/frontend/create-subject.html
+++ b/frontend/create-subject.html
@@ -117,7 +117,27 @@
           });
           function navigateTo(page) {
           window.location.href = page;
-    }
+        }
+        document.querySelector('form').addEventListener('submit', function(event) {
+          event.preventDefault(); // Prevent the form from submitting normally
+
+            // Serialize form data into JSON
+            const formData = new FormData(event.target);
+            const jsonData = {};
+            formData.forEach((value, key) => {
+                jsonData[key] = value;
+            });
+
+          // Send a POST request to the server
+          fetch('http://localhost:8080/create-subject', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+                'Set-Cookie': 'Beautiful-Cookie=' + localStorage.getItem('Beautiful-Cookie') + ';'
+            },
+            body: JSON.stringify(jsonData)
+          })
+        })
       </script>
 </body>
 </html>
